scripts/common/yaml/cluster/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prom.pxclient01.getanton.com
    http:
      paths:
      - backend:
          service:
            name: prom-kube-prometheus-stack-prometheus
            port: 
              number: 9090
        path: /
        pathType: Prefix
